fixed overflow on iphone in landscape

--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ body {
   }
   .gameboard {
     display: flex;
-    height: 100%;
+    height: 75%;
     width: 100%;
     font-size: 1rem;
     flex-direction: column;
